advanced/sonar-postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sq-db-devops
spec:
  replicas: 1
  template:
    metadata:
      name: sq-db-devops
      labels:
        name: sq-db-devops
    spec:
      containers:
        - image: postgres:latest
          name: sq-db-devops
          ports:
            - containerPort: 5432
              name: postgresport
          volumeMounts:
            # This name must match the volumes.name below.
            - name: sqdb-data-devops
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: sqdb-data-devops
          persistentVolumeClaim:
            claimName: sqpv-claim-devops
