advanced/sonarqube-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sq-stg
spec:
  replicas: 1
  template:
    metadata:
      name: sq-stg
      labels:
        name: sq-stg
    spec:
      containers:
        - image: sonarqube:latest
          args:
            - -Dsonar.web.context=/sonar
          name: sq-stg
          ports:
            - containerPort: 9000
              name: sq-stg
          volumeMounts:
            # This name must match the volumes.name below.
            - name: sqpi-data-devops
              mountPath: /opt/sonarqube/extensions/plugins/
      volumes:
        - name: sqpi-data-devops
          persistentVolumeClaim:
            claimName: sqplugins-claim-devops
